--- a/TS.EasyStockManager.Web/appsettings.json
+++ b/TS.EasyStockManager.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "SqlConStr": "Data Source=Server;Database=EasyStockManagerDb;User Id=sa;Password=password;"
+    "SqlConStr": "Data Source=DELPC\\SQLEXPRESS;initial catalog=EasyStockManagerDb;Integrated Security=true"
   },
   "Logging": {
     "LogLevel": {
